# mymacadmintool

./: LICENSE.md  README.md  setup.cfg  setup.py
autopkg-recipe/: mymacadmintool.pkg.recipe
mymacadmintool/: __init__.py
tests/: test_sample.py
