[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[bumpversion]
current_version = 0.0.1 
commit = True 
tag = True

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]
[bumpversion:file:README.md]
[bumpversion:file:autopkg-recipe/mymacadmintool.pkg.recipe]
[bumpversion:file:mymacadmintool/__init__.py]

