[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[tool:pytest]
addopts = --verbose

[bumpversion:file:setup.py]

[bumpversion:file:README.md]

[bumpversion:file:autopkg-recipe/mymacadmintool.pkg.recipe]

[bumpversion:file:mymacadmintool/__init__.py]

